--- a/AdvancedSubwayRoutePlanning/AdvancedSubwayRoutePlanning.csproj
+++ b/AdvancedSubwayRoutePlanning/AdvancedSubwayRoutePlanning.csproj
@@ -35,7 +35,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject />
+    <StartupObject>AdvancedSubwayRoutePlanning.App</StartupObject>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
     <PlatformTarget>x64</PlatformTarget>
