--- a/AdvancedSubwayRoutePlanning/AdvancedSubwayRoutePlanning.csproj
+++ b/AdvancedSubwayRoutePlanning/AdvancedSubwayRoutePlanning.csproj
@@ -45,6 +45,9 @@
     <PlatformTarget>x64</PlatformTarget>
     <OutputPath>bin\x64\Release\</OutputPath>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>Resources\MetroApp.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -134,7 +137,10 @@
     <Resource Include="Resources\StartStation.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Map\beijing-subway.xml" />
+    <Folder Include="Map\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\TransferStation.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
